# spln-2223

./: README.md
TP1/: README.md  pytesseract-test.py  test.hocr  test.xml
TP2/: README.MD
TPC1/: medicina.txt
TPC1/TXT/: main.py
TPC1/XML/: medicina.txt  medicinaC.json  medicinaR.json  parserXML.py
TPC2/: absDict.py  lexTPC2.py  medicina.json  medicinaAbs.json
TPC3/: lexTPC2.py  medicina.json  parserTPC2.py  tokenizadorspln.py
TPC4/: LICENSE  resultado.txt  tokenizadorspln.py
TPC5/: pyproject.toml  tokenizadorspln.py
TPC5/conf/: abreviaturas.txt
